bugfix -> grouping_functions instead of grouping

--- a/example/Tutorial_example-GRS.ipynb
+++ b/example/Tutorial_example-GRS.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,9 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mSAVED FILE:\u001b[0m 'gausspy+.ini' in '/Users/riener/Projects/git/gausspyplus/example'\n"
+     ]
+    }
+   ],
    "source": [
     "import gausspyplus.config_file as cf\n",
     "cf.make()"
@@ -127,9 +135,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "decompose 100 spectra ...\n",
+      "Traceback (most recent call last):\n",
+      "  File \"training_set--grs.py\", line 35, in <module>\n",
+      "    training.decompose_spectra()  # Create the training set.\n",
+      "  File \"/Users/riener/anaconda/lib/python3.5/site-packages/gausspyplus-0.0.dev12-py3.5.egg/gausspyplus/training_set.py\", line 160, in decompose_spectra\n",
+      "    import gausspyplus.parallel_processing\n",
+      "  File \"/Users/riener/anaconda/lib/python3.5/site-packages/gausspyplus-0.0.dev12-py3.5.egg/gausspyplus/parallel_processing.py\", line 16, in <module>\n",
+      "    from .spatial_fitting import SpatialFitting\n",
+      "  File \"/Users/riener/anaconda/lib/python3.5/site-packages/gausspyplus-0.0.dev12-py3.5.egg/gausspyplus/spatial_fitting.py\", line 26, in <module>\n",
+      "    from .utils.grouping import to_graph, get_neighbors\n",
+      "ImportError: No module named 'gausspyplus.utils.grouping'\n"
+     ]
+    }
+   ],
    "source": [
     "#  run the script\n",
     "!python training_set--grs.py"
@@ -508,22 +534,6 @@
     "### Note\n",
     "We could have combined the preparation and decomposition steps in a single script, but for illustrative purposes we have executed them seperately in this tutorial."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
