--- a/example/Tutorial_example-GRS.ipynb
+++ b/example/Tutorial_example-GRS.ipynb
@@ -11,7 +11,7 @@
     "For more information exceeding this tutorial we recommend taking a look at the following papers and documents:\n",
     "\n",
     "- For a description about the GaussPy+ decomposition package see:\n",
-    "> - Riener+ 2019: GaussPy+: A fully automated Gaussian decomposition package for emission line spectra\n",
+    "> - Riener+ 2019 (subm.): GaussPy+: A fully automated Gaussian decomposition package for emission line spectra\n",
     "\n",
     "- For a description about the GaussPy algorithm see: \n",
     "> - [GaussPy documentation](https://gausspy.readthedocs.io/en/latest/)\n",
@@ -142,11 +142,11 @@
     "### Results\n",
     "After this script was successfully executed, the `decomposition_grs` directory should contain a folder named `gpy_training` with two files:\n",
     "\n",
-    "- `grs-test_field_100_spectra.pickle`: a pickled dictionary of the decomposition results of the training set\n",
+    "- `grs-test_field-training_set_100_spectra.pickle`: a pickled dictionary of the decomposition results of the training set\n",
     "\n",
     "- `grs-test_field-training_set_100_spectra_plots.pdf`: plots of the decomposition results. We recommend to always plot a subsample of the training set to check whether the fitting of the training set worked out well.\n",
     "\n",
-    "Since this example serves only to illustrate how training sets can be created we kept the number of spectra of the training set deliberately low. We recommend to include at least 250 spectra in the training set to get good results for the smoothing parameters."
+    "Since this example serves only to illustrate how training sets can be created we kept the number of spectra of the training set deliberately low. We recommend to include at least 200 spectra in the training set to get good results for the smoothing parameters."
    ]
   },
   {
