Refactor tutorial files

--- a/example/Tutorial_decompose_single_spectrum.ipynb
+++ b/example/Tutorial_decompose_single_spectrum.ipynb
@@ -15,6 +15,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "ROOT = Path(os.path.realpath(\"__file__\")).parents[1]\n",
+    "sys.path.append(str(ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "\n",
     "%matplotlib inline\n",
