--- a/example/Tutorial_example-GRS.ipynb
+++ b/example/Tutorial_example-GRS.ipynb
@@ -24,6 +24,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "ROOT = Path(os.path.realpath(\"__file__\")).parents[1]\n",
+    "sys.path.append(str(ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# import necessary libraries and plotting functions\n",
     "\n",
     "import os\n",
