Inherit instance attributes from dataclasses in 'definitions'

--- a/example/Tutorial_decompose_single_spectrum.ipynb
+++ b/example/Tutorial_decompose_single_spectrum.ipynb
@@ -111,7 +111,7 @@
     "\n",
     "#  Mask out ranges in the spectrum; \n",
     "#  specified as a list of tuples [(low1, upp1), ..., (lowN, uppN)]\n",
-    "prepare.mask_out_ranges = []\n",
+    "prepare.mask_out_ranges = None\n",
     "\n",
     "#  Required signal-to-noise ratio for negative data values \n",
     "#  to be counted as noise spikes [float]\n",
