Shift plotting module and update imports

--- a/example/Tutorial_example-GRS.ipynb
+++ b/example/Tutorial_example-GRS.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "from astropy.wcs import WCS\n",
     "\n",
-    "from gausspyplus.plotting import get_points_for_colormap, shiftedColorMap\n",
+    "from gausspyplus.plotting.plotting import get_points_for_colormap, shiftedColorMap\n",
     "\n",
     "\n",
     "def get_cmap_rchi2(vmin, vmax):\n",
