Shift spectral_cube_functions module and update imports

--- a/example/Tutorial_helper_functions.ipynb
+++ b/example/Tutorial_helper_functions.ipynb
@@ -146,7 +146,7 @@
     }
    ],
    "source": [
-    "from gausspyplus.utils.spectral_cube_functions import swap_axes\n",
+    "from gausspyplus.processing.spectral_cube_functions import swap_axes\n",
     "\n",
     "data, header = swap_axes(data, header, (1, 2, 0))\n",
     "header['CUNIT1'] = 'deg'\n",
@@ -206,7 +206,7 @@
     }
    ],
    "source": [
-    "from gausspyplus.utils.spectral_cube_functions import pv_map, moment_map\n",
+    "from gausspyplus.processing.spectral_cube_functions import pv_map, moment_map\n",
     "\n",
     "def add_features(ax, xlabel=None, ylabel=None, title=None, pad=None):\n",
     "    ax.tick_params(pad=6, size=8, labelsize=12, which='both')\n",
@@ -272,7 +272,7 @@
     }
    ],
    "source": [
-    "from gausspyplus.utils.spectral_cube_functions import make_subcube, get_spectral_axis\n",
+    "from gausspyplus.processing.spectral_cube_functions import make_subcube, get_spectral_axis\n",
     "\n",
     "hdu = hdu_orig.copy()\n",
     "slice_params = (slice(5, 45), slice(5, 40), slice(65, 173))\n",
