Shift data directory and files

--- a/tutorials/Tutorial_decompose_single_spectrum.ipynb
+++ b/tutorials/Tutorial_decompose_single_spectrum.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "#  Path to the FITS cube.\n",
     "prepare.path_to_file = os.path.join(\n",
-    "    '..', 'gausspyplus', 'data', 'grs-test_field.fits')\n",
+    "    '..', 'data', 'grs-test_field.fits')\n",
     "\n",
     "prepare.snr = snr\n",
     "prepare.significance = significance\n",
